adds auth.js and inserts necessary imports to index.js

--- a/views/store.html
+++ b/views/store.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Store</h1>
+    <form 
+        action="/store" 
+        method="GET">
+        <script>alert('you got pwned')</script>
+    </form>
 </body>
 </html>
